--- a/tugas2/index.html
+++ b/tugas2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full Screen WebGL Triangle</title>
+    <title>WebGL Triangle - Fadhil</title>
     <style>
         body, html { margin: 0; height: 100%; overflow: hidden; }
         canvas { display: block; width: 100%; height: 100%; }
